--- a/wk04_tidyr.html
+++ b/wk04_tidyr.html
@@ -147,7 +147,7 @@ img {
 <div id="header">
 <h1 class="title">Week 4: Tidying up Data</h1>
 <h4 class="author"><em>Ben Best</em></h4>
-<h4 class="date"><em>2016-01-29 11:00</em></h4>
+<h4 class="date"><em>2016-01-29 11:24</em></h4>
 </div>
 
 
@@ -279,15 +279,13 @@ unite(storms2, &quot;date&quot;, year, month, day, sep = &quot;-&quot;)</code></
 <div id="tidy-co2-emissions" class="section level3">
 <h3>tidy CO<sub>2</sub> emissions</h3>
 <p><em><strong>Task</strong>. Convert the following table <a href="http://edgar.jrc.ec.europa.eu/overview.php?v=CO2ts1990-2014&amp;sort=des9">CO<sub>2</sub> emissions per country since 1970</a> from wide to long format and output the first few rows into your Rmarkdown. I recommend consulting <code>?gather</code> and you should have 3 columns in your output.</em></p>
-<pre class="r"><code>library(readxl) # install.packages(&#39;readxl&#39;)
+<pre class="r"><code>library(dplyr)
+library(readxl) # install.packages(&#39;readxl&#39;)
 
-url = &#39;http://edgar.jrc.ec.europa.eu/news_docs/CO2_1970-2014_dataset_of_CO2_report_2015.xls&#39;
+# xls downloaded from http://edgar.jrc.ec.europa.eu/news_docs/CO2_1970-2014_dataset_of_CO2_report_2015.xls
 xls = &#39;../data/co2_europa.xls&#39;
 
 print(getwd())
-if (!file.exists(xls)){
-  download.file(url, xls)
-}
 co2 = read_excel(xls, skip=12)
 co2</code></pre>
 <p><em><strong>Question</strong>. Why use <code>skip=12</code> argument in <code>read_excel()</code>?</em></p>
@@ -397,75 +395,7 @@ pollution %&gt;%
 </div>
 <div id="joining-data" class="section level2">
 <h2>joining data</h2>
-<div id="bind_cols" class="section level3">
-<h3><code>bind_cols</code></h3>
-<pre class="r"><code>y = data.frame(
-  x1 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;), 
-  x2 = c( 1 , 2 , 3), 
-  stringsAsFactors=F)
-z = data.frame(
-  x1 = c(&#39;B&#39;,&#39;C&#39;,&#39;D&#39;), 
-  x2 = c( 2 , 3 , 4), 
-  stringsAsFactors=F)
-y
-z
-bind_cols(y, z)</code></pre>
-</div>
-<div id="bind_rows" class="section level3">
-<h3><code>bind_rows</code></h3>
-<pre class="r"><code>y
-z
-bind_rows(y, z)</code></pre>
-</div>
-<div id="union" class="section level3">
-<h3><code>union</code></h3>
-<pre class="r"><code>y
-z
-union(y, z)</code></pre>
-</div>
-<div id="intersect" class="section level3">
-<h3><code>intersect</code></h3>
-<pre class="r"><code>y
-z
-intersect(y, z)</code></pre>
-</div>
-<div id="setdiff" class="section level3">
-<h3><code>setdiff</code></h3>
-<pre class="r"><code>y
-z
-setdiff(y, z)</code></pre>
-</div>
-<div id="left_join" class="section level3">
-<h3><code>left_join</code></h3>
-<pre class="r"><code>songs = data.frame(
-  song = c(&#39;Across the Universe&#39;,&#39;Come Together&#39;, &#39;Hello, Goodbye&#39;, &#39;Peggy Sue&#39;),
-  name = c(&#39;John&#39;,&#39;John&#39;,&#39;Paul&#39;,&#39;Buddy&#39;), 
-  stringsAsFactors=F)
-artists = data.frame(
-  name = c(&#39;George&#39;,&#39;John&#39;,&#39;Paul&#39;,&#39;Ringo&#39;),
-  plays = c(&#39;sitar&#39;,&#39;guitar&#39;,&#39;bass&#39;,&#39;drums&#39;), 
-  stringsAsFactors=F)
-left_join(songs, artists, by=&#39;name&#39;)</code></pre>
-</div>
-<div id="inner_join" class="section level3">
-<h3><code>inner_join</code></h3>
-<pre class="r"><code>inner_join(songs, artists, by = &quot;name&quot;)</code></pre>
-</div>
-<div id="semi_join" class="section level3">
-<h3><code>semi_join</code></h3>
-<pre class="r"><code>semi_join(songs, artists, by = &quot;name&quot;)</code></pre>
-</div>
-<div id="anti_join" class="section level3">
-<h3><code>anti_join</code></h3>
-<pre class="r"><code>anti_join(songs, artists, by = &quot;name&quot;)</code></pre>
-</div>
-<div id="summarize-per-capita-co2-emissions" class="section level3">
-<h3>summarize per capita CO<sub>2</sub> emissions</h3>
-<p>You’ll join the <a href="https://github.com/jennybc/gapminder">gapminder</a> datasets to get world population per country.</p>
-<p><em><strong>Task</strong>. Report the top 5 emitting countries (not World or EU28) per capita using your long format table. (You may need to convert your year column from factor to numeric, eg <code>mutate(year = as.numeric(as.character(year)))</code>. As with most analyses, there are multiple ways to do this. I used the following functions: <code>filter</code>, <code>arrange</code>, <code>desc</code>, <code>head</code>)</em>.</p>
-<p><em><strong>Task</strong>. Summarize the total emissions by country (not World or EU28) per capita across years from your long format table and return the top 5 emitting countries. (As with most analyses, there are multiple ways to do this. I used the following functions: <code>filter</code>, <code>arrange</code>, <code>desc</code>, <code>head</code>)</em>.</p>
-<pre class="r"><code>library(gapminder) # install.packages(&#39;gapminder&#39;)</code></pre>
-</div>
+<p>Next week, we’ll do a bit on joining data.</p>
 </div>
 <div id="references" class="section level2">
 <h2>References</h2>
