--- a/wk04_tidyr.html
+++ b/wk04_tidyr.html
@@ -147,7 +147,7 @@ img {
 <div id="header">
 <h1 class="title">Week 4: Tidying up Data</h1>
 <h4 class="author"><em>Ben Best</em></h4>
-<h4 class="date"><em>2016-01-29 11:24</em></h4>
+<h4 class="date"><em>2016-01-29 11:51</em></h4>
 </div>
 
 
@@ -191,6 +191,11 @@ d = read.csv(&#39;../data/r-ecology/surveys.csv&#39;) # ../data is sibling of st
 <div id="assignment-individual" class="section level3">
 <h3>Assignment (Individual)</h3>
 <p>For the data wrangling portion of today, append the header <code>## 4. Tidying up Data</code> to your <code>env-info/students/&lt;user&gt;.Rmd</code> and include R chunks to run the demo below and answer questions. You’ll find it easiest to copy and paste the demo portion from <a href="https://raw.githubusercontent.com/ucsb-bren/env-info/gh-pages/wk04_tidyr.Rmd"><code>env-info/wk04_tidyr.Rmd</code></a> but will need to understand this material enough to apply the functions to the CO<sub>2</sub> dataset as R chunks and answer all the questions.</p>
+<p>A couple of notes about copying these R chunks:</p>
+<ul>
+<li><p>You will want to change the R chunk option from evaluate = FALSE <code>{r, eval=F}</code> to evaluate = TRUE <code>{r, eval=T}</code>. This is especially the case for <code>read co2</code> R chunk which reads in the <code>co2</code> data frame, since you will create additional R chunks which expect this object to already exist.</p></li>
+<li><p>You will want to first synchronize with <code>ucsb-bren/env-info</code> (ie <em>pull request</em> <code>ucsb-bren/env-info</code> to <code>&lt;user&gt;/env-info</code>, <em>merge</em> the pull request in <code>&lt;user&gt;/env-info</code>, and <em>pull</em> to update your local machine), in order to successfully knit your <code>env-info/students/&lt;user&gt;.Rmd</code>, which may expect <code>env-info/wk04_tidyr/img/data-wrangling-cheatsheet_tidyr.png</code> and <code>env-info/data/co2_europa.xls</code>.</p></li>
+</ul>
 </div>
 </div>
 <div id="data" class="section level2">
