--- a/wk04_tidyr.html
+++ b/wk04_tidyr.html
@@ -147,7 +147,7 @@ img {
 <div id="header">
 <h1 class="title">Week 4: Tidying up Data</h1>
 <h4 class="author"><em>Ben Best</em></h4>
-<h4 class="date"><em>2016-01-29 11:51</em></h4>
+<h4 class="date"><em>2016-01-29 11:52</em></h4>
 </div>
 
 
@@ -194,7 +194,7 @@ d = read.csv(&#39;../data/r-ecology/surveys.csv&#39;) # ../data is sibling of st
 <p>A couple of notes about copying these R chunks:</p>
 <ul>
 <li><p>You will want to change the R chunk option from evaluate = FALSE <code>{r, eval=F}</code> to evaluate = TRUE <code>{r, eval=T}</code>. This is especially the case for <code>read co2</code> R chunk which reads in the <code>co2</code> data frame, since you will create additional R chunks which expect this object to already exist.</p></li>
-<li><p>You will want to first synchronize with <code>ucsb-bren/env-info</code> (ie <em>pull request</em> <code>ucsb-bren/env-info</code> to <code>&lt;user&gt;/env-info</code>, <em>merge</em> the pull request in <code>&lt;user&gt;/env-info</code>, and <em>pull</em> to update your local machine), in order to successfully knit your <code>env-info/students/&lt;user&gt;.Rmd</code>, which may expect <code>env-info/wk04_tidyr/img/data-wrangling-cheatsheet_tidyr.png</code> and <code>env-info/data/co2_europa.xls</code>.</p></li>
+<li><p>You will want to synchronize with <code>ucsb-bren/env-info</code> (ie <em>pull request</em> <code>ucsb-bren/env-info</code> to <code>&lt;user&gt;/env-info</code>, <em>merge</em> the pull request in <code>&lt;user&gt;/env-info</code>, and <em>pull</em> to update your local machine), in order to successfully knit your <code>env-info/students/&lt;user&gt;.Rmd</code>, which may expect <code>env-info/wk04_tidyr/img/data-wrangling-cheatsheet_tidyr.png</code> and <code>env-info/data/co2_europa.xls</code>.</p></li>
 </ul>
 </div>
 </div>
