--- a/refs.html
+++ b/refs.html
@@ -114,7 +114,7 @@ img {
 <div class="navbar navbar-default navbar-fixed-top navbar-transparent">
   <div class="container">
     <div class="navbar-header">
-      <a href="/" class="navbar-brand"><i class="fa fa-home"></i> env-info</a>
+      <a href="http://ucsb-bren.github.io/env-info/" class="navbar-brand"><i class="fa fa-home"></i> env-info</a>
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -145,7 +145,7 @@ img {
 
 <div id="header">
 <h1 class="title">References</h1>
-<h4 class="date"><em>2016-01-20 14:27</em></h4>
+<h4 class="date"><em>2016-02-03 12:12</em></h4>
 </div>
 
 
@@ -157,6 +157,7 @@ img {
 <li><a href="refs/cheatsheets/devtools-cheatsheet.pdf">devtools-cheatsheet.pdf</a></li>
 <li><a href="refs/cheatsheets/ggplot2-cheatsheet-2.0.pdf">ggplot2-cheatsheet-2.0.pdf</a></li>
 <li><a href="refs/cheatsheets/github-git-cheat-sheet.pdf">github-git-cheat-sheet.pdf</a></li>
+<li><a href="refs/cheatsheets/R_Cheat_Data.pdf">R_Cheat_Data.pdf</a></li>
 <li><a href="refs/cheatsheets/rmarkdown-cheatsheet.pdf">rmarkdown-cheatsheet.pdf</a></li>
 <li><a href="refs/cheatsheets/rmarkdown-reference.pdf">rmarkdown-reference.pdf</a></li>
 <li><a href="refs/cheatsheets/rstudio-IDE-cheatsheet.pdf">rstudio-IDE-cheatsheet.pdf</a></li>
@@ -171,6 +172,7 @@ img {
 <li><a href="refs/lit/DataONE%20Data%20Management%20Guide%20for%20Public%20Participation%20PPSR-DataManagementGuide.pdf">DataONE Data Management Guide for Public Participation PPSR-DataManagementGuide.pdf</a></li>
 <li><a href="refs/lit/Hampton%20et%20al%20-%202014%20-%20The%20tao%20of%20open%20science%20for%20ecology.pdf">Hampton et al - 2014 - The tao of open science for ecology.pdf</a></li>
 <li><a href="refs/lit/Teal%20et%20al%20-%202015%20-%20Data%20Carpentry.pdf">Teal et al - 2015 - Data Carpentry.pdf</a></li>
+<li><a href="refs/lit/Wickham%20-%202010%20-%20A%20Layered%20Grammar%20of%20Graphics.pdf">Wickham - 2010 - A Layered Grammar of Graphics.pdf</a></li>
 <li><a href="refs/lit/Wilson%20et%20al%20-%202014%20-%20Best%20Practices%20for%20Scientific%20Computing.pdf">Wilson et al - 2014 - Best Practices for Scientific Computing.pdf</a></li>
 </ul>
 </div>
@@ -228,7 +230,7 @@ $(function() {
 });
 </script>
 
-<div style="color:gray">
+<div style="color:gray; text-align: right;" >
   <span class="octicon octicon-repo-forked"></span> <b>Fork</b> me at <a href="http://github.com/ucsb-bren/env-info">github.com/<b>ucsb-bren/env-info</b></a>
 </div>
 
