fix dragging %>% and incorrect eval cmd

--- a/students/knboysen.html
+++ b/students/knboysen.html
@@ -81,13 +81,12 @@ img {
 <li><a href="#week-04-tidyr">Week 04– Tidyr</a></li>
 <li><a href="#tidyr-1">tidyr</a></li>
 <li><a href="#assignment-4">Assignment 4</a></li>
-<li><a href="#dplyr-1">dplyr</a></li>
 </ul>
 </div>
 
 <pre><code>## function (dir) 
 ## .Internal(setwd(dir))
-## &lt;bytecode: 0x0000000013190bb0&gt;
+## &lt;bytecode: 0x000000001317fc50&gt;
 ## &lt;environment: namespace:base&gt;</code></pre>
 <div id="content" class="section level2">
 <h2>Content</h2>
@@ -743,14 +742,14 @@ left_join(songs, artists, by=&quot;name&quot;)</code></pre>
 <h2>Week 04– Tidyr</h2>
 <div id="edawr" class="section level3">
 <h3>EDAWR</h3>
-<pre class="r"><code># install.packages(&quot;devtools&quot;)
-# devtools::install_github(&quot;rstudio/EDAWR&quot;)
-library(EDAWR)
-help(package='EDAWR')
-?storms    # wind speed data for 6 hurricanes
-?cases     # subset of WHO tuberculosis
-?pollution # pollution data from WHO Ambient Air Pollution, 2014
-?tb        # tuberculosis data
+<pre class="r"><code>#install.packages(&quot;devtools&quot;)
+#devtools::install_github(&quot;rstudio/EDAWR&quot;)
+#library(EDAWR)
+#help(package='EDAWR')
+#?storms    # wind speed data for 6 hurricanes
+#?cases     # subset of WHO tuberculosis
+#?pollution # pollution data from WHO Ambient Air Pollution, 2014
+#?tb        # tuberculosis data
 #Viewd(storms)
 #View(cases)
 #View(pollution)</code></pre>
@@ -844,124 +843,84 @@ unite(storms2, &quot;date&quot;, year, month, day, sep = &quot;-&quot;)</code></
 url = 'http://edgar.jrc.ec.europa.eu/news_docs/CO2_1970-2014_dataset_of_CO2_report_2015.xls'
 xls = '../data/co2_europa.xls'
 
-print(getwd())
-if (!file.exists(xls)){
+print(getwd())</code></pre>
+<pre><code>## [1] &quot;C:/Users/Kristen/Documents/BREN/winter16/env_info/env-info/students&quot;</code></pre>
+<pre class="r"><code>if (!file.exists(xls)){
   download.file(url, xls, method='internal')
 }
-co2 = read_excel(xls, skip=12)
-co2</code></pre>
+co2 = read_excel(xls, skip=12)</code></pre>
+<pre><code>## DEFINEDNAME: 21 00 00 01 0b 00 00 00 01 00 00 00 00 00 00 0d 3b 00 00 0c 00 e0 00 00 00 2c 00 
+## DEFINEDNAME: 21 00 00 01 0b 00 00 00 01 00 00 00 00 00 00 0d 3b 00 00 0c 00 e0 00 00 00 2c 00 
+## DEFINEDNAME: 21 00 00 01 0b 00 00 00 01 00 00 00 00 00 00 0d 3b 00 00 0c 00 e0 00 00 00 2c 00 
+## DEFINEDNAME: 21 00 00 01 0b 00 00 00 01 00 00 00 00 00 00 0d 3b 00 00 0c 00 e0 00 00 00 2c 00</code></pre>
 <p><em><strong>Question</strong>. Why use <code>skip=12</code> argument in <code>read_excel()</code>?</em> The ‘skip-12’ command in the read_excel because the first 12 rows of the excel file are metadata– titles, information about where the data came from etc.</p>
-<pre class="r"><code>co2 #%&gt;% </code></pre>
-<pre><code>##         Jan    Feb    Mar    Apr    May    Jun    Jul    Aug    Sep    Oct
-## 1959 315.42 316.31 316.50 317.56 318.13 318.00 316.39 314.65 313.68 313.18
-## 1960 316.27 316.81 317.42 318.87 319.87 319.43 318.01 315.74 314.00 313.68
-## 1961 316.73 317.54 318.38 319.31 320.42 319.61 318.42 316.63 314.83 315.16
-## 1962 317.78 318.40 319.53 320.42 320.85 320.45 319.45 317.25 316.11 315.27
-## 1963 318.58 318.92 319.70 321.22 322.08 321.31 319.58 317.61 316.05 315.83
-## 1964 319.41 320.07 320.74 321.40 322.06 321.73 320.27 318.54 316.54 316.71
-## 1965 319.27 320.28 320.73 321.97 322.00 321.71 321.05 318.71 317.66 317.14
-## 1966 320.46 321.43 322.23 323.54 323.91 323.59 322.24 320.20 318.48 317.94
-## 1967 322.17 322.34 322.88 324.25 324.83 323.93 322.38 320.76 319.10 319.24
-## 1968 322.40 322.99 323.73 324.86 325.40 325.20 323.98 321.95 320.18 320.09
-## 1969 323.83 324.26 325.47 326.50 327.21 326.54 325.72 323.50 322.22 321.62
-## 1970 324.89 325.82 326.77 327.97 327.91 327.50 326.18 324.53 322.93 322.90
-## 1971 326.01 326.51 327.01 327.62 328.76 328.40 327.20 325.27 323.20 323.40
-## 1972 326.60 327.47 327.58 329.56 329.90 328.92 327.88 326.16 324.68 325.04
-## 1973 328.37 329.40 330.14 331.33 332.31 331.90 330.70 329.15 327.35 327.02
-## 1974 329.18 330.55 331.32 332.48 332.92 332.08 331.01 329.23 327.27 327.21
-## 1975 330.23 331.25 331.87 333.14 333.80 333.43 331.73 329.90 328.40 328.17
-## 1976 331.58 332.39 333.33 334.41 334.71 334.17 332.89 330.77 329.14 328.78
-## 1977 332.75 333.24 334.53 335.90 336.57 336.10 334.76 332.59 331.42 330.98
-## 1978 334.80 335.22 336.47 337.59 337.84 337.72 336.37 334.51 332.60 332.38
-## 1979 336.05 336.59 337.79 338.71 339.30 339.12 337.56 335.92 333.75 333.70
-## 1980 337.84 338.19 339.91 340.60 341.29 341.00 339.39 337.43 335.72 335.84
-## 1981 339.06 340.30 341.21 342.33 342.74 342.08 340.32 338.26 336.52 336.68
-## 1982 340.57 341.44 342.53 343.39 343.96 343.18 341.88 339.65 337.81 337.69
-## 1983 341.20 342.35 342.93 344.77 345.58 345.14 343.81 342.21 339.69 339.82
-## 1984 343.52 344.33 345.11 346.88 347.25 346.62 345.22 343.11 340.90 341.18
-## 1985 344.79 345.82 347.25 348.17 348.74 348.07 346.38 344.51 342.92 342.62
-## 1986 346.11 346.78 347.68 349.37 350.03 349.37 347.76 345.73 344.68 343.99
-## 1987 347.84 348.29 349.23 350.80 351.66 351.07 349.33 347.92 346.27 346.18
-## 1988 350.25 351.54 352.05 353.41 354.04 353.62 352.22 350.27 348.55 348.72
-## 1989 352.60 352.92 353.53 355.26 355.52 354.97 353.75 351.52 349.64 349.83
-## 1990 353.50 354.55 355.23 356.04 357.00 356.07 354.67 352.76 350.82 351.04
-## 1991 354.59 355.63 357.03 358.48 359.22 358.12 356.06 353.92 352.05 352.11
-## 1992 355.88 356.63 357.72 359.07 359.58 359.17 356.94 354.92 352.94 353.23
-## 1993 356.63 357.10 358.32 359.41 360.23 359.55 357.53 355.48 353.67 353.95
-## 1994 358.34 358.89 359.95 361.25 361.67 360.94 359.55 357.49 355.84 356.00
-## 1995 359.98 361.03 361.66 363.48 363.82 363.30 361.94 359.50 358.11 357.80
-## 1996 362.09 363.29 364.06 364.76 365.45 365.01 363.70 361.54 359.51 359.65
-## 1997 363.23 364.06 364.61 366.40 366.84 365.68 364.52 362.57 360.24 360.83
-##         Nov    Dec
-## 1959 314.66 315.43
-## 1960 314.84 316.03
-## 1961 315.94 316.85
-## 1962 316.53 317.53
-## 1963 316.91 318.20
-## 1964 317.53 318.55
-## 1965 318.70 319.25
-## 1966 319.63 320.87
-## 1967 320.56 321.80
-## 1968 321.16 322.74
-## 1969 322.69 323.95
-## 1970 323.85 324.96
-## 1971 324.63 325.85
-## 1972 326.34 327.39
-## 1973 327.99 328.48
-## 1974 328.29 329.41
-## 1975 329.32 330.59
-## 1976 330.14 331.52
-## 1977 332.24 333.68
-## 1978 333.75 334.78
-## 1979 335.12 336.56
-## 1980 336.93 338.04
-## 1981 338.19 339.44
-## 1982 339.09 340.32
-## 1983 340.98 342.82
-## 1984 342.80 344.04
-## 1985 344.06 345.38
-## 1986 345.48 346.72
-## 1987 347.64 348.78
-## 1988 349.91 351.18
-## 1989 351.14 352.37
-## 1990 352.69 354.07
-## 1991 353.64 354.89
-## 1992 354.09 355.33
-## 1993 355.30 356.78
-## 1994 357.59 359.05
-## 1995 359.61 360.74
-## 1996 360.80 362.38
-## 1997 362.49 364.34</code></pre>
-<pre class="r"><code>  #gather(&quot;Year&quot;, &quot;CO2&quot;, 2:46) #%&gt;% 
-  #head()</code></pre>
-</div>
-<div id="dplyr-1" class="section level2">
-<h2>dplyr</h2>
-<p>A package that helps transform tabular data</p>
-<pre class="r"><code># install.packages(&quot;dplyr&quot;)
-library(dplyr)
-?select
-?filter
-?arrange
-?mutate
-?group_by
-?summarise</code></pre>
-<ul>
-<li>Subset Variables (Columns), eg <code>select()</code></li>
-<li>Subset Observations (Rows), eg <code>filter()</code></li>
-<li>Reshaping Data - Change the layout of a data set, eg <code>arrange()</code></li>
-<li>Make New Variables, eg <code>mutate()</code></li>
-<li>Group Data, eg <code>group_by()</code> and <code>summarise()</code></li>
-</ul>
-<pre class="r"><code>#co2 %&gt;% 
- # mutate(total_emissions= sum(2:46)) %&gt;% 
-  #select(Country, total_emissions)</code></pre>
+<pre class="r"><code>co2_long&lt;- co2 %&gt;% 
+  gather(&quot;Year&quot;, &quot;CO2&quot;, 2:46)
+head(co2_long)</code></pre>
+<pre><code>## Source: local data frame [6 x 3]
+## 
+##          Country        Year          CO2
+##            (chr)       (chr)        (dbl)
+## 1    Afghanistan 1970.000000  1813.981234
+## 2        Albania 1970.000000  4435.433037
+## 3        Algeria 1970.000000 18850.745443
+## 4 American Samoa 1970.000000     6.183023
+## 5         Angola 1970.000000  8946.495011
+## 6       Anguilla 1970.000000     2.168006</code></pre>
+<pre class="r"><code>###this code, though it works in R, returns the error &quot;Error in eval(expr, envir, enclos): not compatible with STRSXP calls: &lt;Anonymous&gt;...&lt;Anonymous&gt; -&gt; select_Vars_ -&gt; combine_vars -&gt;.Call
+
+##halp!</code></pre>
 <div id="summarize-co2-emissions" class="section level3">
 <h3>summarize CO<sub>2</sub> emissions</h3>
 <p><em><strong>Task</strong>. Report the top 5 emitting countries (not World or EU28) for 2014 using your long format table. (You may need to convert your year column from factor to numeric, eg <code>mutate(year = as.numeric(as.character(year)))</code>. As with most analyses, there are multiple ways to do this. I used the following functions: <code>filter</code>, <code>arrange</code>, <code>desc</code>, <code>head</code>)</em>.</p>
-<pre class="r"><code>#co2 %&gt;% 
- # mutate(year = as.numeric(as.character(year)))</code></pre>
+<pre class="r"><code>co2_long %&gt;% 
+  mutate(Year = as.numeric(as.character(Year))) %&gt;%
+  filter(Year==2014) %&gt;%
+  filter(Country!=&quot;EU28&quot;, Country!=&quot;World&quot;) %&gt;% 
+  top_n(5, CO2) %&gt;% 
+  arrange(desc(CO2)) %&gt;% 
+  head</code></pre>
+<pre><code>## Source: local data frame [5 x 3]
+## 
+##                    Country  Year      CO2
+##                      (chr) (dbl)    (dbl)
+## 1                    China  2014 10540750
+## 2 United States of America  2014  5334530
+## 3                    India  2014  2341897
+## 4       Russian Federation  2014  1766427
+## 5                    Japan  2014  1278922</code></pre>
+<pre class="r"><code>         #        Country  Year      CO2
+          #           (chr) (dbl)    (dbl)
+          #          China  2014 10540750
+# United States of America  2014  5334530
+#                    India  2014  2341897
+#       Russian Federation  2014  1766427
+#                    Japan  2014  1278922</code></pre>
 <p><em><strong>Task</strong>. Summarize the total emissions by country (not World or EU28) across years from your long format table and return the top 5 emitting countries. (As with most analyses, there are multiple ways to do this. I used the following functions: <code>filter</code>, <code>arrange</code>, <code>desc</code>, <code>head</code>)</em>.</p>
+<pre class="r"><code>co2_long %&gt;% 
+  filter(Country!=&quot;EU28&quot;, Country!=&quot;World&quot;) %&gt;% 
+  group_by(Country) %&gt;% 
+  summarise(total_emissions=sum(CO2)) %&gt;% 
+  arrange(desc(total_emissions)) %&gt;% 
+  head()</code></pre>
+<pre><code>## Source: local data frame [6 x 2]
+## 
+##                    Country total_emissions
+##                      (chr)           (dbl)
+## 1 United States of America       231948899
+## 2                    China       174045927
+## 3       Russian Federation        81242427
+## 4                    Japan        51276329
+## 5                  Germany        43382205
+## 6                    India        39004218</code></pre>
+<pre class="r"><code>#                   Country total_emissions
+                  #   (chr)           (dbl)
+#United States of America       231948899
+#                    China       174045927
+#       Russian Federation        81242427
+#                    Japan        51276329
+#                  Germany        43382205
+#                    India        39004218</code></pre>
 </div>
 </div>
 
