--- a/wk05_ggplot/joining.html
+++ b/wk05_ggplot/joining.html
@@ -100,6 +100,10 @@ img {
 </ul></li>
 </ul>
 </div>
+<div id="dealing-with-merge-conflicts" class="section level3">
+<h3>Dealing with Merge Conflicts</h3>
+<p><a href="http://r-pkgs.had.co.nz/git.html#git-pull">Git and GitHub · R packages – Working with others</a></p>
+</div>
 </div>
 <div id="joining-data" class="section level2">
 <h2>joining data</h2>
