--- a/wk04_tidyr.html
+++ b/wk04_tidyr.html
@@ -147,7 +147,7 @@ img {
 <div id="header">
 <h1 class="title">Week 4: Tidying up Data</h1>
 <h4 class="author"><em>Ben Best</em></h4>
-<h4 class="date"><em>2016-02-02 10:24</em></h4>
+<h4 class="date"><em>2016-02-03 15:45</em></h4>
 </div>
 
 
@@ -208,7 +208,7 @@ help(package=&#39;EDAWR&#39;)
 ?cases     # subset of WHO tuberculosis
 ?pollution # pollution data from WHO Ambient Air Pollution, 2014
 ?tb        # tuberculosis data
-Viewd(storms)
+View(storms)
 View(cases)
 View(pollution)</code></pre>
 </div>
